--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "netfilx",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://AbhijithtpGit.github.io/NETFLIX-CLONE-APP",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
